setup/applications/k8s/kubernetes-dashboard/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/name: kubernetes-dashboard
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: "0.0.0.0/0"
    nginx.org/ssl-services: "kubernetes-dashboard-kong-proxy"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    #nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    #nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.ingress.kubernetes.io/ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
    #nginx.ingress.kubernetes.io/configuration-snippet: |
    #  rewrite ^(/kubernetes-dashboard)$ $1/ redirect;
    #nginx.ingress.kubernetes.io/configuration-snippet: |
    #  proxy_set_header Accept-Encoding "";
    #  sub_filter '<base href="/">' '<base href="/kubernetes-dashboard">';
    #  sub_filter_once on;
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
    #nginx.org/path-regex: "case_insensitive"
  name: kubernetes-dashboard
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - lab.swag-code.com
      secretName: kubernetes-dashboard-tls-secret
  rules:
    - host: lab.swag-code.com
      http:
        paths:
        - path: /kubernetes-dashboard
          pathType: Prefix
          backend:
            service:
              name: kubernetes-dashboard-kong-proxy
              port:
                number: 443
